[tool.poetry]
name = "discord-courier"
version = "0.1.0"
description = ""
authors = ["Tyler Holewinski <tyler.holewinski@bryx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
